--- a/Test/packages.config
+++ b/Test/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CSoft.LogInterface" version="1.0.0" targetFramework="net48" />
+  <package id="CSoft.Utils" version="1.0.0" targetFramework="net48" />
   <package id="System.IO.Ports" version="4.7.0" targetFramework="net48" />
 </packages>
