--- a/Parser/Parser.csproj
+++ b/Parser/Parser.csproj
@@ -5,7 +5,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageTags></PackageTags>
     <Description>数据分帧解析器</Description>
-    <Version>5.0.2</Version>
+    <Version>5.0.3</Version>
     <Authors>CSoft</Authors>
     <PackageId>CSoft.Parser</PackageId>
     <PackageReleaseNotes>数据分帧解析器</PackageReleaseNotes>
@@ -14,7 +14,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>bin\Release\netstandard2.0\Parser.xml</DocumentationFile>
+    <DocumentationFile>bin\Parser.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
