--- a/TopPortLib/TopPortLib.csproj
+++ b/TopPortLib/TopPortLib.csproj
@@ -2,22 +2,22 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <Version>5.0.2</Version>
+    <Version>5.0.3</Version>
     <Description>通讯口使用类库</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageReleaseNotes>通讯口使用类库</PackageReleaseNotes>
     <PackageTags></PackageTags>
-    <AssemblyVersion>5.0.2.0</AssemblyVersion>
+    <AssemblyVersion>5.0.3.0</AssemblyVersion>
     <PackageId>CSoft.TopPortLib</PackageId>
     <Authors>CSoft</Authors>
     <Company>CSoft</Company>
     <PackageProjectUrl>https://github.com/caoyiliang/Communication</PackageProjectUrl>
     <RepositoryUrl>https://github.com/caoyiliang/Communication</RepositoryUrl>
-    <FileVersion>5.0.2.0</FileVersion>
+    <FileVersion>5.0.3.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>bin\Release\netstandard2.0\TopPortLib.xml</DocumentationFile>
+    <DocumentationFile>bin\TopPortLib.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
