物理口添加进程间命名管道通讯

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@
 /TopPortLib/obj
 /TopPortLibIntTest/bin
 /TopPortLibIntTest/obj
+/TestNamedPipeClient/bin
+/TestNamedPipeClient/obj
+/TestNamedPipeServer/bin
+/TestNamedPipeServer/obj
