通讯队列添加可设后台任务，当指示为true时，超时时间从发送开始计算，否则，从加入队列开始计算

--- a/Crow/Crow.csproj
+++ b/Crow/Crow.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>5.0.2</Version>
+    <Version>5.0.7</Version>
     <Description>数据收发队列</Description>
     <PackageId>CSoft.Crow</PackageId>
     <Authors>CSoft</Authors>
@@ -24,6 +24,10 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CSoft.Utils" Version="5.0.3" />
   </ItemGroup>
 
 </Project>
