--- a/Crow/Crow.csproj
+++ b/Crow/Crow.csproj
@@ -1,33 +1,33 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>5.0.7</Version>
-    <Description>数据收发队列</Description>
-    <PackageId>CSoft.Crow</PackageId>
-    <Authors>CSoft</Authors>
-    <Company>CSoft</Company>
-    <PackageReleaseNotes>数据收发队列</PackageReleaseNotes>
-    <PackageProjectUrl>https://github.com/caoyiliang/Communication</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/caoyiliang/Communication</RepositoryUrl>
-    <PackageIcon>logo.png</PackageIcon>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>netstandard2.0;net5.0</TargetFrameworks>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<Version>5.0.8</Version>
+		<Description>数据收发队列</Description>
+		<PackageId>CSoft.Crow</PackageId>
+		<Authors>CSoft</Authors>
+		<Company>CSoft</Company>
+		<PackageReleaseNotes>数据收发队列</PackageReleaseNotes>
+		<PackageProjectUrl>https://github.com/caoyiliang/Communication</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/caoyiliang/Communication</RepositoryUrl>
+		<PackageIcon>logo.png</PackageIcon>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>bin\Crow.xml</DocumentationFile>
-    <OutputPath></OutputPath>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<DocumentationFile>bin\Crow.xml</DocumentationFile>
+		<OutputPath></OutputPath>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Include="..\logo.png">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
-  </ItemGroup>
+	<ItemGroup>
+		<None Include="..\logo.png">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="CSoft.Utils" Version="5.0.3" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="CSoft.Utils" Version="5.0.4" />
+	</ItemGroup>
 
 </Project>
