--- a/TopPortLib/TopPortLib.csproj
+++ b/TopPortLib/TopPortLib.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <Version>5.1.3</Version>
+    <TargetFrameworks>netstandard2.0;net5.0</TargetFrameworks>
+    <Version>5.1.4</Version>
     <Description>通讯口使用类库</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageReleaseNotes>通讯口使用类库</PackageReleaseNotes>
@@ -20,20 +20,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Parsers\**" />
-    <Compile Remove="Timers\**" />
-    <EmbeddedResource Remove="Parsers\**" />
-    <EmbeddedResource Remove="Timers\**" />
-    <None Remove="Parsers\**" />
-    <None Remove="Timers\**" />
     <None Include="..\logo.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Remove="RemainBytes.cs" />
   </ItemGroup>
 
   <ItemGroup>
