--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net5.0;net6.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>6.0.3</Version>
+    <Version>6.0.4</Version>
     <Description>通讯物理口封装</Description>
     <PackageReleaseNotes>通讯物理口封装</PackageReleaseNotes>
     <PackageTags></PackageTags>
@@ -17,11 +17,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
 	<LangVersion>default</LangVersion>
 	<DocumentationFile>bin\Communication.xml</DocumentationFile>
+	<Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CSoft.LogInterface" Version="6.0.1" />
-    <PackageReference Include="CSoft.Utils" Version="6.0.1" />
+    <PackageReference Include="CSoft.LogInterface" Version="6.0.2" />
+    <PackageReference Include="CSoft.Utils" Version="6.0.3" />
     <PackageReference Include="System.IO.Ports" Version="6.0.0" />
   </ItemGroup>
 
