--- a/Crow/Crow.csproj
+++ b/Crow/Crow.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0;net5.0;net6.0</TargetFrameworks>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<Version>6.0.3</Version>
+		<Version>6.0.4</Version>
 		<Description>数据收发队列</Description>
 		<PackageId>CSoft.Crow</PackageId>
 		<Authors>CSoft</Authors>
@@ -15,6 +15,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<LangVersion>default</LangVersion>
 		<DocumentationFile>bin\Crow.xml</DocumentationFile>
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -25,7 +26,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="CSoft.Utils" Version="6.0.1" />
+		<PackageReference Include="CSoft.Utils" Version="6.0.3" />
 	</ItemGroup>
 
 </Project>
