--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net5.0;net6.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>6.2.0</Version>
+    <Version>6.2.1</Version>
     <Description>通讯物理口封装</Description>
     <PackageReleaseNotes>通讯物理口封装</PackageReleaseNotes>
     <PackageTags></PackageTags>
@@ -22,7 +22,7 @@
 
   <ItemGroup>
     <PackageReference Include="CSoft.LogInterface" Version="6.0.2" />
-    <PackageReference Include="CSoft.Utils" Version="6.0.4" />
+    <PackageReference Include="CSoft.Utils" Version="6.0.5" />
     <PackageReference Include="System.IO.Ports" Version="6.0.0" />
   </ItemGroup>
 
