约束异步通讯协议包

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@
 /TestNamedPipeClient/obj
 /TestNamedPipeServer/bin
 /TestNamedPipeServer/obj
+/PigeonPortProtocolDemo/bin
+/PigeonPortProtocolDemo/obj
