简化异步通信处理方式

--- a/TcpServer/TcpServer.csproj
+++ b/TcpServer/TcpServer.csproj
@@ -8,6 +8,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PigeonPortProtocolDemo\PigeonPortProtocolDemo.csproj" />
+    <ProjectReference Include="..\TopPortLib\TopPortLib.csproj" />
   </ItemGroup>
 </Project>
