--- a/.gitignore
+++ b/.gitignore
@@ -7,24 +7,26 @@
 /Communication/obj
 /Crow/bin
 /Crow/obj
-/MockTcpClient/bin
-/MockTcpClient/obj
-/packages
 /Parser/bin
 /Parser/obj
-/PigeonPortDemo/bin
-/PigeonPortDemo/obj
-/Test/bin
-/Test/obj
-/TestTcpServer/bin
-/TestTcpServer/obj
 /TopPortLib/bin
 /TopPortLib/obj
-/TopPortLibIntTest/bin
-/TopPortLibIntTest/obj
-/TestNamedPipeClient/bin
-/TestNamedPipeClient/obj
-/TestNamedPipeServer/bin
-/TestNamedPipeServer/obj
-/PigeonPortProtocolDemo/bin
-/PigeonPortProtocolDemo/obj
+/TestDemo/MockTcpClient/bin
+/TestDemo/MockTcpClient/obj
+/packages
+/TestDemo/PigeonPortDemo/bin
+/TestDemo/PigeonPortDemo/obj
+/TestDemo/Test/bin
+/TestDemo/Test/obj
+/TestDemo/TestTcpServer/bin
+/TestDemo/TestTcpServer/obj
+/TestDemo/TopPortLibIntTest/bin
+/TestDemo/TopPortLibIntTest/obj
+/TestDemo/TestNamedPipeClient/bin
+/TestDemo/TestNamedPipeClient/obj
+/TestDemo/TestNamedPipeServer/bin
+/TestDemo/TestNamedPipeServer/obj
+/TestDemo/PigeonPortProtocolDemo/bin
+/TestDemo/PigeonPortProtocolDemo/obj
+/TestDemo/TcpServer/bin
+/TestDemo/TcpServer/obj
