--- a/TestDemo/TopPortLibIntTest/TopPortLibIntTest.csproj
+++ b/TestDemo/TopPortLibIntTest/TopPortLibIntTest.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TopPortLib\TopPortLib.csproj" />
+    <ProjectReference Include="..\..\TopPortLib\TopPortLib.csproj" />
   </ItemGroup>
 
 </Project>
