--- a/TestDemo/TestNamedPipeClient/TestNamedPipeClient.csproj
+++ b/TestDemo/TestNamedPipeClient/TestNamedPipeClient.csproj
@@ -17,7 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TopPortLib\TopPortLib.csproj" />
+    <ProjectReference Include="..\..\TopPortLib\TopPortLib.csproj" />
   </ItemGroup>
 
 </Project>
