--- a/Parser/Parser.csproj
+++ b/Parser/Parser.csproj
@@ -1,11 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;net6.0;net7.0</TargetFrameworks>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<PackageTags></PackageTags>
 		<Description>数据分帧解析器</Description>
-		<Version>6.6.0</Version>
+		<Version>7.0.0</Version>
 		<Authors>CSoft</Authors>
 		<PackageId>CSoft.Parser</PackageId>
 		<PackageReleaseNotes>数据分帧解析器</PackageReleaseNotes>
@@ -19,8 +18,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="CSoft.LogInterface" Version="6.0.3" />
-		<PackageReference Include="CSoft.Utils" Version="6.0.8" />
+		<PackageReference Include="CSoft.LogInterface" Version="7.0.0" />
+		<PackageReference Include="CSoft.Utils" Version="7.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
