新增神雕口

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@
 /TestDemo/PigeonPortProtocolDemo/obj
 /TestDemo/TcpServer/bin
 /TestDemo/TcpServer/obj
+/CondorPortDemo/bin
+/CondorPortDemo/obj
+/CondorPortProtocolDemo/bin
+/CondorPortProtocolDemo/obj
