--- a/Parser/Parser.csproj
+++ b/Parser/Parser.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net6.0;net7.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;net7.0</TargetFrameworks>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Description>数据分帧解析器</Description>
-		<Version>7.0.3</Version>
+		<Version>7.0.4</Version>
 		<Authors>CSoft</Authors>
 		<PackageId>CSoft.Parser</PackageId>
 		<PackageReleaseNotes>数据分帧解析器</PackageReleaseNotes>
@@ -19,7 +19,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="CSoft.LogInterface" Version="7.0.0" />
-		<PackageReference Include="CSoft.Utils" Version="7.0.2" />
+		<PackageReference Include="CSoft.Utils" Version="7.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
