--- a/TestDemo/CondorPortProtocolDemo/CondorPortProtocolDemo.csproj
+++ b/TestDemo/CondorPortProtocolDemo/CondorPortProtocolDemo.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TopPortLib\TopPortLib.csproj" />
+    <ProjectReference Include="..\..\TopPortLib\TopPortLib.csproj" />
   </ItemGroup>
 
 </Project>
