--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net7.0;net8.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>7.0.5</Version>
+    <Version>8.0.0</Version>
     <Description>通讯物理口封装</Description>
-    <PackageReleaseNotes>通讯物理口封装</PackageReleaseNotes>
+    <PackageReleaseNotes>支持.net8</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>CSoft.Communication</PackageId>
     <Authors>CSoft</Authors>
@@ -20,9 +20,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CSoft.LogInterface" Version="7.0.0" />
-    <PackageReference Include="CSoft.Utils" Version="7.0.3" />
-    <PackageReference Include="System.IO.Ports" Version="7.0.0" />
+    <PackageReference Include="CSoft.LogInterface" Version="8.0.0" />
+    <PackageReference Include="CSoft.Utils" Version="8.0.0" />
+    <PackageReference Include="System.IO.Ports" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
