--- a/TopPortLib/TopPortLib.csproj
+++ b/TopPortLib/TopPortLib.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net7.0</TargetFrameworks>
-    <Version>7.0.6</Version>
+    <TargetFrameworks>netstandard2.0;net7.0;net8.0</TargetFrameworks>
+    <Version>8.0.0</Version>
     <Description>通讯口使用类库</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageReleaseNotes>通讯口使用类库</PackageReleaseNotes>
+    <PackageReleaseNotes>更新.net8</PackageReleaseNotes>
     <PackageId>CSoft.TopPortLib</PackageId>
     <Authors>CSoft</Authors>
     <Company>CSoft</Company>
