修复TcpClient在网络断开情况下快速发现

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@
 /TestDemo/CondorPortDemo/obj
 /TestDemo/CondorPortProtocolDemo/bin
 /TestDemo/CondorPortProtocolDemo/obj
+/TestDemo/TcpClient/bin
+/TestDemo/TcpClient/obj
