--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -3,9 +3,9 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net7.0;net8.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>8.0.2</Version>
+    <Version>8.0.3</Version>
     <Description>通讯物理口封装</Description>
-    <PackageReleaseNotes>修复公共库bug</PackageReleaseNotes>
+    <PackageReleaseNotes>修复推送对端连接成功的严重问题</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>CSoft.Communication</PackageId>
     <Authors>CSoft</Authors>
