--- a/Parser/Parser.csproj
+++ b/Parser/Parser.csproj
@@ -4,10 +4,10 @@
 		<TargetFrameworks>netstandard2.0;net7.0;net8.0</TargetFrameworks>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Description>数据分帧解析器</Description>
-		<Version>8.0.3</Version>
+		<Version>8.0.4</Version>
 		<Authors>CSoft</Authors>
 		<PackageId>CSoft.Parser</PackageId>
-		<PackageReleaseNotes>修复推送对端连接成功的严重问题</PackageReleaseNotes>
+		<PackageReleaseNotes>更新CSoft.Utils依赖</PackageReleaseNotes>
 		<PackageProjectUrl>https://github.com/caoyiliang/Communication</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/caoyiliang/Communication</RepositoryUrl>
 		<PackageIcon>logo.png</PackageIcon>
@@ -19,7 +19,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="CSoft.LogInterface" Version="8.0.0" />
-		<PackageReference Include="CSoft.Utils" Version="8.0.1" />
+		<PackageReference Include="CSoft.Utils" Version="8.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
