--- a/TopPortLib/TopPortLib.csproj
+++ b/TopPortLib/TopPortLib.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net7.0;net8.0</TargetFrameworks>
-    <Version>8.0.6</Version>
+    <Version>8.0.7</Version>
     <Description>通讯口使用类库</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageReleaseNotes>Linux下连接状态优化</PackageReleaseNotes>
+    <PackageReleaseNotes>更新CSoft.Utils依赖</PackageReleaseNotes>
     <PackageId>CSoft.TopPortLib</PackageId>
     <Authors>CSoft</Authors>
     <Company>CSoft</Company>
