修复同步口在多线程中的表现

--- a/TestDemo/ParserTest/ParserTest.csproj
+++ b/TestDemo/ParserTest/ParserTest.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Parser\Parser.csproj" />
+    <ProjectReference Include="..\..\Parser\Parser.csproj" />
   </ItemGroup>
 
 </Project>
