添加蓝牙经典通信及测试项目配置
- 在 `.gitignore` 文件中添加了 `/bin` 和 `/obj` 路径
- 新增 `BluetoothClassic` 类，实现 `IPhysicalPort` 接口
- 新增 `BluetoothClassic_Server` 类，实现 `IPhysicalPort_Server` 接口
- 新增 `Communication.Bluetooth.csproj` 项目文件
- 在 `Communication.sln` 中添加 `Communication.Bluetooth`、`TestServer` 和 `TestClient` 项目
- 为 `TestClient` 和 `TestServer` 项目添加 `App.xaml` 和 `App.xaml.cs` 配置
- 为 `TestClient` 和 `TestServer` 项目添加 `AssemblyInfo.cs` 主题信息
- 为 `TestClient` 和 `TestServer` 项目添加 `MainWindow.xaml` 和 `MainWindow.xaml.cs` 逻辑处理
- 新增 `TestClient.csproj` 和 `TestServer.csproj` 项目文件

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,9 @@
 /TestDemo/TestUdp/obj
 /TestDemo/TestUdp1/bin
 /TestDemo/TestUdp1/obj
+/Communication.Bluetooth/bin
+/Communication.Bluetooth/obj
+/TestDemo/Bluetooth/TestClient/bin
+/TestDemo/Bluetooth/TestClient/obj
+/TestDemo/Bluetooth/TestServer/bin
+/TestDemo/Bluetooth/TestServer/obj
