重构UDP通信，新增多对多通讯接口
更新内容：
- `Communication.Bluetooth.csproj` 文件版本号从 `9.3.3` 更新到 `9.4.0`，并更新 `PackageReleaseNotes` 为 `UDP重构`
- 移除 `UdpClient.cs` 文件
- `Communication.csproj` 文件版本号从 `9.2.3` 更新到 `9.3.0`，并更新 `PackageReleaseNotes` 为 `UDP重构`
- `Program.cs` 文件中，移除对 `Communication.Bus.PhysicalPort` 和 `System.Net` 的引用，添加对 `Communication.Bus` 的引用，更新 `TopPort` 初始化和数据发送逻辑
- `TopPortLib.csproj` 文件版本号从 `9.5.3` 更新到 `9.6.0`，并更新 `PackageReleaseNotes` 为 `UDP重构`
- 新增 `Udp.cs` 文件，定义 `Udp` 类，实现 `IPhysicalPort_M2M` 接口，包含UDP通信逻辑
- 新增 `IPhysicalPort_M2M.cs` 文件，定义多对多通讯接口 `IPhysicalPort_M2M`
- 新增 `TopPort_M2M.cs` 文件，定义 `TopPort_M2M` 类，实现 `ITopPort_M2M` 接口，包含多对多通讯口逻辑
- 新增 `ITopPort_M2M.cs` 文件，定义多对多通讯口接口 `ITopPort_M2M`

--- a/Communication.Bluetooth/Communication.Bluetooth.csproj
+++ b/Communication.Bluetooth/Communication.Bluetooth.csproj
@@ -7,12 +7,12 @@
 		<LangVersion>default</LangVersion>
 		<PackageId>CSoft.Communication.Bluetooth</PackageId>
 		<Title>通讯库蓝牙拓展</Title>
-		<Version>9.3.3</Version>
+		<Version>9.4.0</Version>
 		<Authors>CSoft</Authors>
 		<PackageIcon>logo.png</PackageIcon>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<RepositoryUrl>https://github.com/caoyiliang/Communication</RepositoryUrl>
-		<PackageReleaseNotes>UDP易用性提升</PackageReleaseNotes>
+		<PackageReleaseNotes>UDP重构</PackageReleaseNotes>
 		<PackageProjectUrl>https://github.com/caoyiliang/Communication</PackageProjectUrl>
 	</PropertyGroup>
 
