提升 PhysicalPort 发送效率并更新版本号
更新了多个项目文件的版本号以反映提升了 PhysicalPort 发送效率：
- `Communication.Bluetooth.csproj` 从 `9.4.0` 到 `9.5.0`
- `Communication.csproj` 从 `9.3.0` 到 `9.4.0`
- `Parser.csproj` 从 `9.1.1` 到 `9.1.2`
- `TopPortLib.csproj` 从 `9.6.0` 到 `9.7.0`

在 `BusPort.cs` 文件中：
- 引入了 `System.Threading.Channels` 命名空间
- 添加了新的私有任务 `_sendTask` 和通道 `_channel`
- 添加了异步方法 `SendProcessDataAsync` 用于处理发送数据
- 修改了 `CloseAsync` 方法以确保关闭时等待 `_sendTask` 完成
- 修改了 `SendDataAsync` 方法以使用通道处理数据发送
- 在 `ReadBusAsync` 方法中启动了 `SendProcessDataAsync` 任务

--- a/Communication.Bluetooth/Communication.Bluetooth.csproj
+++ b/Communication.Bluetooth/Communication.Bluetooth.csproj
@@ -7,12 +7,12 @@
 		<LangVersion>default</LangVersion>
 		<PackageId>CSoft.Communication.Bluetooth</PackageId>
 		<Title>通讯库蓝牙拓展</Title>
-		<Version>9.4.0</Version>
+		<Version>9.5.0</Version>
 		<Authors>CSoft</Authors>
 		<PackageIcon>logo.png</PackageIcon>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<RepositoryUrl>https://github.com/caoyiliang/Communication</RepositoryUrl>
-		<PackageReleaseNotes>UDP重构</PackageReleaseNotes>
+		<PackageReleaseNotes>提升PhysicalPort发送效率</PackageReleaseNotes>
 		<PackageProjectUrl>https://github.com/caoyiliang/Communication</PackageProjectUrl>
 	</PropertyGroup>
 
