添加新项目并更新多个项目文件版本
在 `.gitignore` 文件中添加和移除了一些路径。
更新 `Communication.Bluetooth.csproj`、`Communication.csproj` 和 `TopPortLib.csproj` 的版本号和 `PackageReleaseNotes`。
在 `Communication.sln` 文件中添加了 `TCP测速`、`Client` 和 `Server` 项目。
修改 `BusPort.cs` 和 `TcpClient.cs` 文件的实现细节。
将 `IBusPort.cs` 中的 `IDisposable` 接口改为 `IAsyncDisposable`。
添加了 `Client.csproj` 和 `Server.csproj` 文件，并在 `Program.cs` 中添加了新的客户端和服务器程序。

--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,11 @@
 /Parser/obj
 /TopPortLib/bin
 /TopPortLib/obj
+/Communication.Bluetooth/bin
+/Communication.Bluetooth/obj
+/packages
 /TestDemo/MockTcpClient/bin
 /TestDemo/MockTcpClient/obj
-/packages
 /TestDemo/PigeonPortDemo/bin
 /TestDemo/PigeonPortDemo/obj
 /TestDemo/Test/bin
@@ -42,9 +44,11 @@
 /TestDemo/TestUdp/obj
 /TestDemo/TestUdp1/bin
 /TestDemo/TestUdp1/obj
-/Communication.Bluetooth/bin
-/Communication.Bluetooth/obj
 /TestDemo/Bluetooth/TestClient/bin
 /TestDemo/Bluetooth/TestClient/obj
 /TestDemo/Bluetooth/TestServer/bin
 /TestDemo/Bluetooth/TestServer/obj
+/TestDemo/Client/bin
+/TestDemo/Client/obj
+/TestDemo/Server/bin
+/TestDemo/Server/obj
