--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>9.4.1</Version>
+    <Version>9.5.0</Version>
     <Description>通讯物理口封装</Description>
     <PackageReleaseNotes>
-		提升PhysicalPort发送效率,更新依赖
+		提升TCPClient发送效率
 	</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>CSoft.Communication</PackageId>
