更新多个项目版本及依赖项
- `Communication.Bluetooth.csproj` 版本从 `9.6.0` 更新到 `9.6.1`，发布说明为“更新依赖”。
- `Communication.csproj` 版本从 `9.5.0` 更新到 `9.5.1`，`CSoft.Utils` 版本从 `9.1.1` 更新到 `9.1.4`。
- `Crow.csproj` 版本从 `9.1.2` 更新到 `9.1.3`，`CSoft.Utils` 版本更新到 `9.1.4`。
- `Parser.csproj` 版本从 `9.1.3` 更新到 `9.1.4`，`CSoft.Utils` 版本更新到 `9.1.4`。
- `Server.csproj` 移除对 `CSoft.TopPortLib` 的包引用，改为引用项目文件 `TopPortLib.csproj`。
- `TopPortLibIntTest.csproj` 中的 `MSTest.TestAdapter` 和 `MSTest.TestFramework` 版本从 `3.7.3` 更新到 `3.8.0`。
- `TopPortLib.csproj` 版本从 `9.8.0` 更新到 `9.8.1`，发布说明为“更新依赖”。

--- a/TestDemo/Server/Server.csproj
+++ b/TestDemo/Server/Server.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CSoft.TopPortLib" Version="9.7.1" />
+    <ProjectReference Include="..\..\TopPortLib\TopPortLib.csproj" />
   </ItemGroup>
 
 </Project>
