--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>9.5.0</Version>
+    <Version>9.5.1</Version>
     <Description>通讯物理口封装</Description>
     <PackageReleaseNotes>
-		提升TCPClient发送效率
+		更新依赖
 	</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>CSoft.Communication</PackageId>
@@ -23,7 +23,7 @@
 
   <ItemGroup>
     <PackageReference Include="CSoft.LogInterface" Version="9.0.0" />
-    <PackageReference Include="CSoft.Utils" Version="9.1.1" />
+    <PackageReference Include="CSoft.Utils" Version="9.1.4" />
     <PackageReference Include="System.IO.Ports" Version="9.0.2" />
   </ItemGroup>
 
