更新版本号并新增连接断开参数
更新多个项目文件的版本号至9.7.1、9.6.1和9.9.1。
在`BusPort`类中新增`isDisconnectedWhenZero`参数，以控制读取到0字节时的连接断开行为，并在`ReadDataAsync`方法中进行相应判断。
同时更新`TopPort`类的实例化，传入新的参数。
最后，更新各项目的`PackageReleaseNotes`以反映这些更改。

--- a/Communication/Communication.csproj
+++ b/Communication/Communication.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net9.0;net8.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>9.6.0</Version>
+    <Version>9.6.1</Version>
     <Description>通讯物理口封装</Description>
     <PackageReleaseNotes>
-		首次连接失败后是否重连
+		新增 `isDisconnectedWhenZero` 参数，控制读取到字节数为0时的连接断开行为
 	</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>CSoft.Communication</PackageId>
