--- a/Communication.Bluetooth/Communication.Bluetooth.csproj
+++ b/Communication.Bluetooth/Communication.Bluetooth.csproj
@@ -7,12 +7,12 @@
 		<LangVersion>default</LangVersion>
 		<PackageId>CSoft.Communication.Bluetooth</PackageId>
 		<Title>通讯库蓝牙拓展</Title>
-		<Version>9.7.0</Version>
+		<Version>9.7.1</Version>
 		<Authors>CSoft</Authors>
 		<PackageIcon>logo.png</PackageIcon>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<RepositoryUrl>https://github.com/caoyiliang/Communication</RepositoryUrl>
-		<PackageReleaseNotes>首次连接失败后是否重连</PackageReleaseNotes>
+		<PackageReleaseNotes>新增 `isDisconnectedWhenZero` 参数，控制读取到字节数为0时的连接断开行为</PackageReleaseNotes>
 		<PackageProjectUrl>https://github.com/caoyiliang/Communication</PackageProjectUrl>
 	</PropertyGroup>
 
